# multi-tenant-bot-service

./: .env.example  .gitignore  README.md  azure.yaml  pyproject.toml  requirements.txt
infra/: main.bicep  main.parameters.json
src/: __init__.py  app.py  foundry_client.py  start_server.py  telemetry.py
teams/appPackage/: README.md  manifest.json
